--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -17,9 +14,46 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-# Go workspace file
+# Go workspace files
 go.work
 go.work.sum
 
-# env file
+# Environment files
 .env
+
+# Logs and debug files
+*.log
+*.log.*
+
+# GoLand specific files
+.idea/
+*.iml
+
+# Editor swap files and backups
+*~
+*.swp
+*.swo
+*.bak
+*.tmp
+
+# Compiled object files and caches
+*.o
+*.a
+*.lo
+*.la
+*.pyc
+*.pyo
+*.pyd
+
+# Go modules and cache
+go.sum
+/go/pkg
+/go/bin
+/go/src
+
+# Go test coverage profiles
+coverage.out
+
+# Local development & system files
+.DS_Store
+Thumbs.db
