--- a/.env.sample
+++ b/.env.sample
@@ -1,13 +1,38 @@
-# SERVER
+# SERVER CONFIGURATION
+# The port on which the server will listen for incoming requests
 SERVER_PORT="8000"
+
+# The host address for the server (0.0.0.0 allows access from any IP)
 SERVER_HOST="0.0.0.0"
-TOKEN_EXP_MINUTES=1440
-REFRESH_TOKEN_EXP_MINUTES=2880
+
+# Token expiration settings in minutes
+TOKEN_EXP_MINUTES=1440               # Expiration time for access tokens
+REFRESH_TOKEN_EXP_MINUTES=2880       # Expiration time for refresh tokens
+
+# Secret key used for signing tokens (ensure this is kept secret)
 TOKEN_SECRET="P@$$%Secret6677"
 
-# DB
-DB_USER="root"
-DB_PASS="123456"
-DB_HOST="localhost"
-DB_PORT=5432
-DB_NAME="magic_creeper"
+# TELEGRAM BOT CONFIGURATION
+# Your Telegram bot token (replace with your actual token)
+TELEGRAM_BOT_TOKEN="YOUR_TELEGRAM_BOT_TOKEN"
+
+# DB CONFIGURATION
+# Database connection settings
+DB_USER="root"                       # Database username
+DB_PASS="123456"                     # Database password (consider using a stronger password)
+DB_HOST="localhost"                  # Database host address
+DB_PORT=5432                         # Database port (default for PostgreSQL)
+DB_NAME="magic_creeper"              # Name of the database
+
+# OPTIONAL: ADDITIONAL CONFIGURATION
+# Log level for debugging (e.g., DEBUG, INFO, WARNING, ERROR)
+LOG_LEVEL="DEBUG"
+
+# URL of the property site to crawl
+PROPERTY_SITE_URL="https://example.com/properties"
+
+# Frequency of crawling in seconds (adjust as needed)
+CRAWL_FREQUENCY=3600                 # 1 hour
+
+# Optional: Path to store logs or data files
+LOG_FILE_PATH="./logs/crawler.log"
