--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# If you prefer the allow list template instead of the deny list, see community template:
+# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
+#
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -14,46 +17,9 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-# Go workspace files
+# Go workspace file
 go.work
 go.work.sum
 
-# Environment files
+# env file
 .env
-
-# Logs and debug files
-*.log
-*.log.*
-
-# GoLand specific files
-.idea/
-*.iml
-
-# Editor swap files and backups
-*~
-*.swp
-*.swo
-*.bak
-*.tmp
-
-# Compiled object files and caches
-*.o
-*.a
-*.lo
-*.la
-*.pyc
-*.pyo
-*.pyd
-
-# Go modules and cache
-go.sum
-/go/pkg
-/go/bin
-/go/src
-
-# Go test coverage profiles
-coverage.out
-
-# Local development & system files
-.DS_Store
-Thumbs.db
