initial config modified:   .env.sample modified:   cmd/main.go modified:   config/config.go modified:   config/read.go modified:   pkg/adapters/storage/setup.go

--- a/.env.sample
+++ b/.env.sample
@@ -6,8 +6,8 @@ SERVER_PORT="8000"
 SERVER_HOST="0.0.0.0"
 
 # Token expiration settings in minutes
-TOKEN_EXP_MINUTES=1440               # Expiration time for access tokens
-REFRESH_TOKEN_EXP_MINUTES=2880       # Expiration time for refresh tokens
+TOKEN_EXP_MINUTES="1440"               # Expiration time for access tokens
+REFRESH_TOKEN_EXP_MINUTES="2880"       # Expiration time for refresh tokens
 
 # Secret key used for signing tokens (ensure this is kept secret)
 TOKEN_SECRET="P@$$%Secret6677"
@@ -21,7 +21,7 @@ TELEGRAM_BOT_TOKEN="YOUR_TELEGRAM_BOT_TOKEN"
 DB_USER="root"                       # Database username
 DB_PASS="123456"                     # Database password (consider using a stronger password)
 DB_HOST="localhost"                  # Database host address
-DB_PORT="5432"                         # Database port (default for PostgreSQL)
+DB_PORT="5432"                       # Database port (default for PostgreSQL)
 DB_NAME="magic_creeper"              # Name of the database
 
 # OPTIONAL: ADDITIONAL CONFIGURATION
