--- a/cmd/conf.env
+++ b/cmd/conf.env
@@ -14,7 +14,7 @@ TOKEN_SECRET="P@$$%Secret6677"
 
 # TELEGRAM BOT CONFIGURATION
 # Your Telegram bot token (replace with your actual token)
-TELEGRAM_BOT_TOKEN="YOUR_TELEGRAM_BOT_TOKEN"
+TELEGRAM_BOT_TOKEN="8196883587:AAH9gp-uA_AbMOHmzOFx2uSZSM2u0F7IqG8"
 
 # DB CONFIGURATION
 # Database connection settings
